@@ -4,6 +4,8 @@
        for autoexpanding in the commit dialog can now be stored
        in %APPDATA%\TortoiseSVN\autolist.txt so they won't get
        overwritten on upgrades. (Stefan)
+- NEW: Allow "compare with base" for added and deleted files
+       in the commit/cfm dialog. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
